--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Excursion - Discover Hidden Places</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
         <header>
@@ -10,10 +10,19 @@
             <a href="#">Download Excursion (Coming soon!)</a>
         </header>
         <main>
-
+            <video controls>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+              <h2>Your personal travel guide</h2>
+              <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+              <img src="resources/images/camp.jpeg" />
+              <img src="resources/images/phone.png">
+              <h2>Coming Soon for iPhone and Android</h2>
+              <a href="#">Download Excursion (Coming soon!)</a>
         </main>
         <footer>
-
+            <p>&copy; Excursion</p>
         </footer>
     </body>
 </html>
