--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             <a href="#">Download Excursion (Coming soon!)</a>
         </header>
         <main>
-            <video controls>
+            <video autoplay>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video>
               <h2>Your personal travel guide</h2>
               <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-              <img src="resources/images/camp.jpeg" />
-              <img src="resources/images/phone.png">
+              <p><img src="resources/images/camp.jpeg" /></p>
+              <p><img src="resources/images/phone.png"></p>
               <h2>Coming Soon for iPhone and Android</h2>
               <a href="#">Download Excursion (Coming soon!)</a>
         </main>
