--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <a href="#">Download Excursion (Coming soon!)</a>
         </header>
         <main>
-            <video autoplay>
+            <video autoplay muted loop>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video>
